# mcpSampleServer

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
src/: config.py  server.py
src/prompts/: __init__.py
src/resources/: __init__.py
src/schemas/: arithmetic.py
src/services/: arithmetic.py
src/tools/: __init__.py  arithmetic.py
tests/integration/: test_arithmetic_tool.py
tests/unit/: test_arithmetic_service.py
